# pruebas-c--

./: CMakeLists.txt  controller.cpp  main.cpp  my_window.cpp
.github/workflows/: c-cpp.yml
db/: connectbd.hpp  sqlite.hpp
home/: controller.cpp  model.cpp  view.cpp
home/children/task/: controller.cpp  model.cpp  view.cpp
include/: controller.hpp  model.hpp  my_window.hpp  view.hpp
include/home/: controller.hpp  model.hpp  view.hpp
include/home/children/task/: controller.hpp  model.hpp  view.hpp
